# panel-regression-co2-emission-gdp-causal-relationship

./: .gitignore  analysis.ipynb  pyproject.toml
data/: API_EG.USE.ELEC.KH.PC_DS2_en_csv_v2_258.csv  API_EN.GHG.CO2.PC.CE.AR5_DS2_en_csv_v2_610.csv  API_NY.GDP.PCAP.PP.CD_DS2_en_csv_v2_35.csv  Metadata_Indicator_API_EN.GHG.CO2.PC.CE.AR5_DS2_en_csv_v2_610.csv
report/: report.aux  report.blg  report.out  report.tex
